{
  "searchPageTitle": "GitHub Search",
  "result": "result",
  "detailPageTitle": "Repo Detail",
  "language": "Language",
  "star": "Star",
  "watch": "Watch",
  "fork": "Fork",
  "issue": "Issue",

  "errorOccurred": "Error Occurred.",
  "errorOccurredDetail": "Please retry later.",
  "networkError": "Network Error.",
  "networkErrorDetail": "Please check the connection and try again.",
  "enterText": "Please Enter Text.",
  "noResult": "Not Found Search Result.",
  "noResultDetail": "Please change your search words.",

  "bestMatch": "Best Match",
  "updated": "Updated",
  "stars": "Stars",
  "forks": "Forks",
  "helpWantedIssue": "Help Wanted Issues",

  "viewOnGitHub": "View On GitHub",

  "formHintText": "Search Repository"
}